--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Soham Sonar | Portfolio</title>
-
+  <link rel="icon" type="image/x-icon" href="images/favicon.ico">
   <!-- External Styles -->
   <link rel="stylesheet" href="style.css" />
 
@@ -97,7 +97,13 @@
       <!-- Resume Section -->
     <section id="resume" data-aos="zoom-in-up">
       <h2>My Resume</h2>
-      <a class="resume-btn" href="resume.pdf" download>📄 Download Resume</a>
+      <a href="resume.pdf" class="resume-btn" download>
+  <button>
+    <div class="top">Resume</div>
+    <div class="bottom"></div>
+  </button>
+</a>
+
     </section>
 <div class="section-gap"></div>
     <!-- Contact Parallax Section -->
