--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <div class="nav-right" id="navRight">
     <a href="https://github.com/soham-exe" target="_blank"><i class="fab fa-github"></i></a>
     <a href="https://www.linkedin.com/in/soham-sonar-a98400251" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-    <a href="https://www.instagram.com/kahihiha_soham" target="_blank"><i class="fab fa-instagram"></i></a>
+    <a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
     <a href="mailto:soham.2004@outlook.com"><i class="fas fa-envelope"></i></a>
     <a href="https://github.com/soham-exe" target="_blank">
 </a>
