--- a/index.html
+++ b/index.html
@@ -84,9 +84,16 @@
 <a href="https://github.com/soham-exe/canteen_management" target="_blank" 
    class="project-card tilt-card" data-tilt data-tilt-speed="400">
 
-    <img src="images/project2.png" alt="Project 2">
+    <img src="images/project2.png" alt="Canteen Management System">
     <h3>Project 2: Canteen Management System</h3>
-    <p>Canteen management system to place & track orders seamlessly.</p>
+    <p>Canteen management system to place & track orders seamlessly, with a user-friendly interface.</p>
+</a>
+<a href="https://github.com/soham-exe/GDSL" target="_blank" 
+   class="project-card tilt-card" data-tilt data-tilt-speed="400">
+
+    <img src="images/project3.png" alt="Generalized Data Structure Library">
+    <h3>Project 3: Generalized Data Structure Library</h3>
+    <p>Library of data structures implemented in C++.</p>
 </a>
     </div>
   </section>
