--- a/index.html
+++ b/index.html
@@ -87,7 +87,10 @@
     <img src="images/project2.png" alt="Canteen Management System">
     <h3>Project 2: Canteen Management System</h3>
     <p>Canteen management system to place & track orders seamlessly, with a user-friendly interface.</p>
-</a>
+  </a>
+</div>
+<!-- Project 3 -->
+ <div class="project-grid">
 <a href="https://github.com/soham-exe/GDSL" target="_blank" 
    class="project-card tilt-card" data-tilt data-tilt-speed="400">
 
@@ -95,7 +98,7 @@
     <h3>Project 3: Generalized Data Structure Library</h3>
     <p>Library of data structures implemented in C++.</p>
 </a>
-    </div>
+</div>
   </section>
 
 
