--- a/index.html
+++ b/index.html
@@ -101,6 +101,16 @@
     <p>Library of data structures implemented in C++.</p>
 </a>
 </div>
+<!-- Project 4 -->
+ <div class="project-grid">
+<a href="https://github.com/soham-exe/typing-keyboard" target="_blank" 
+   class="project-card tilt-card" data-tilt data-tilt-speed="400">
+
+    <img src="images/project4.png" alt="Typing Keyboard">
+    <h3>Project 4: Typing Keyboard</h3>
+    <p>Engaging speed typing game.</p>
+</a>
+</div>
   </section>
 
 
