--- a/index.html
+++ b/index.html
@@ -73,43 +73,32 @@
   <!-- 💼 PROJECTS SECTION ------------------------------------------------------------------------------------------------------------>
   <section id="projects" data-aos="fade-up">
     <h2>My Projects</h2>
-<!-- Project Grid -->
-      <div class="project-grid">
-      <a href="https://github.com/soham-exe/PROJECT-1-JARVIS" target="_blank" class="project-card tilt-card" data-tilt data-tilt-speed="400">
+<div class="project-grid">
+
+    <a href="https://github.com/soham-exe/PROJECT-1-JARVIS" target="_blank" class="project-card tilt-card" data-tilt data-tilt-speed="400">
         <img src="images/Jarvis.jpeg" alt="Project 1">
         <h3>Project 1: Jarvis AI</h3>
         <p>Python-based virtual assistant that responds to voice commands.</p>
-      </a>
-</div>
-<!-- Project 2 -->
-<div class="project-grid">
-<a href="https://github.com/soham-exe/canteen_management" target="_blank" 
-   class="project-card tilt-card" data-tilt data-tilt-speed="400">
+    </a>
 
-    <img src="images/project2.png" alt="Canteen Management System">
-    <h3>Project 2: Canteen Management System</h3>
-    <p>Canteen management system to place & track orders seamlessly, with a user-friendly interface.</p>
-  </a>
-</div>
-<!-- Project 3 -->
- <div class="project-grid">
-<a href="https://github.com/soham-exe/GDSL" target="_blank" 
-   class="project-card tilt-card" data-tilt data-tilt-speed="400">
+    <a href="https://github.com/soham-exe/canteen_management" target="_blank" class="project-card tilt-card" data-tilt data-tilt-speed="400">
+        <img src="images/project2.png" alt="Canteen Management System">
+        <h3>Project 2: Canteen Management System</h3>
+        <p>Canteen management system to place & track orders seamlessly, with a user-friendly interface.</p>
+    </a>
 
-    <img src="images/project3.png" alt="Generalized Data Structure Library">
-    <h3>Project 3: Generalized Data Structure Library</h3>
-    <p>Library of data structures implemented in C++.</p>
-</a>
-</div>
-<!-- Project 4 -->
- <div class="project-grid">
-<a href="https://github.com/soham-exe/typing-keyboard" target="_blank" 
-   class="project-card tilt-card" data-tilt data-tilt-speed="400">
+    <a href="https://github.com/soham-exe/GDSL" target="_blank" class="project-card tilt-card" data-tilt data-tilt-speed="400">
+        <img src="images/project3.png" alt="Generalized Data Structure Library">
+        <h3>Project 3: Generalized Data Structure Library</h3>
+        <p>Library of data structures implemented in C++.</p>
+    </a>
 
-    <img src="images/project4.png" alt="Typing Keyboard">
-    <h3>Project 4: Typing Keyboard</h3>
-    <p>Engaging speed typing game.</p>
-</a>
+    <a href="https://github.com/soham-exe/typing-keyboard" target="_blank" class="project-card tilt-card" data-tilt data-tilt-speed="400">
+        <img src="images/project4.png" alt="Typing Keyboard">
+        <h3>Project 4: Typing Keyboard</h3>
+        <p>Engaging speed typing game.</p>
+    </a>
+
 </div>
   </section>
 
